--- a/auricle.css
+++ b/auricle.css
@@ -1,5 +1,14 @@
-/* CSS declarations go here */
-body {
+header, main, footer {
+  padding-left: 240px;
+}
+
+@media only screen and (max-width : 992px) {
+  header, main, footer {
+    padding-left: 0;
+  }
+}
+
+/*body {
   font-family: sans-serif;
   background-color: #315481;
   background-image: linear-gradient(to bottom, #315481, #918e82 100%);
@@ -123,4 +132,4 @@ header .hide-completed {
   .new-message input {
     padding-bottom: 5px;
   }
-}
+}*/
